plugins/groovy/testdata/highlighting/CyclicInheritance.groovy
class <error descr="Method 'invokeMethod' is not implemented"><error descr="Cyclic inheritance involving 'A'">A</error></error> extends C {

}

class <error descr="Method 'invokeMethod' is not implemented"><error descr="Cyclic inheritance involving 'B'">B</error></error> extends A {

}

class <error descr="Method 'invokeMethod' is not implemented"><error descr="Cyclic inheritance involving 'C'">C</error></error> extends B {

}

class <error descr="Method 'invokeMethod' is not implemented"><error descr="Cyclic inheritance involving 'B'">D</error></error> extends B {

}